Comit MATEO TACURI

--- a/src/RegistrarProductos.form
+++ b/src/RegistrarProductos.form
@@ -234,6 +234,14 @@
           <grid row="19" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
+      <component id="3397c" class="javax.swing.JButton" binding="menuButton" default-binding="true">
+        <constraints>
+          <grid row="20" column="15" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Menu"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
