--- a/src/Carrito.form
+++ b/src/Carrito.form
@@ -180,6 +180,14 @@
           <text value="Precio"/>
         </properties>
       </component>
+      <component id="837a3" class="javax.swing.JButton" binding="actualizarButton" default-binding="true">
+        <constraints>
+          <grid row="4" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Actualizar"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
