--- a/src/Carrito.form
+++ b/src/Carrito.form
@@ -188,6 +188,14 @@
           <text value="Actualizar"/>
         </properties>
       </component>
+      <component id="a8afb" class="javax.swing.JButton" binding="generarReporteButton" default-binding="true">
+        <constraints>
+          <grid row="6" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Generar Reporte"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
